--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p{
     background: #222324;
 }
 .header{
-    background :radial-gradient(#fff,#ffd6d6);
+    background :radial-gradient(#fff,#9ef2f8);
 }
 .header .row{
     margin-top: 70px;
